--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,23 @@
-streamlit
-pandas
-fpdf2
-openai
+# ============================================================================
+# CANTIERE SICURO - Requirements
+# pip install -r requirements.txt
+# ============================================================================
+
+# Core Framework
+streamlit>=1.28.0
+
+# PDF Generation & Manipulation
+fpdf2>=2.7.0
+pypdf>=3.0.0
+
+# Database & Auth (Supabase)
+supabase>=2.0.0
+
+# HTTP Requests (per Lemon Squeezy API)
+requests>=2.28.0
+
+# AI Features (opzionale)
+openai>=1.0.0
+
+# Utilities
+python-dateutil>=2.8.0
