--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # ============================================================================
-# CANTIERE SICURO - Requirements
+# POS FACILE - Requirements
 # pip install -r requirements.txt
 # ============================================================================
 
